--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,54 @@ main > .wrap > .content-block {
 }
 
 @media only screen and (max-width: 767px) {
+    header {
+        height: 120px;
+    }
+
+    header > .header-content {
+        flex-wrap: wrap;
+        height: 100%;
+    }
+
+    header > .header-content > .header-logo {
+        flex-grow: 1;
+        width: initial;
+        justify-content: flex-start;
+    }
+
+    header > .header-content > .menu-bar {
+        flex-grow: 1;
+        width: initial;
+        justify-content: flex-end;
+    }
+
+    .menu-bar > .nav-content.active {
+        height: 200px;
+    }
+
+    .menu-bar > .nav-content > .btn-close {
+        top: 30px;
+    }
+
+    .menu-bar > .nav-content > .nav-list > ul {
+        flex-direction: column;
+    }
+
+    .menu-bar > .nav-content > .nav-list > ul > li {
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    header > .header-content > .search-bar {
+        flex-grow: 2;
+        width: initial;
+        height: initial;
+    }
+
+    header > .header-content > .user-info {
+        display: none;
+    }
+
     .content-block > .content-item {
         width: 100%;
     }
