--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,29 @@
+:root {
+    --main-bg-color: #f6f6f7;
+    --text-hover-color: #c1d160;
+    --text-gray-color: #717171;
+    --text-light-color: #8c8c8c;
+    --text-discr-color: #B7B5B5;
+    --border-color: #e8e8e8;
+    --content-main-color: white;
+    --menu-elem-color: black;
+}
+
 body {
     margin: 0;
-    background-color: #F0EFEE;
+    background-color: var(--main-bg-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
     height: 100px;
     width: 100%;
-    background-color: white;
+    background-color: var(--content-main-color);
     border-bottom: 1px solid rgba(214, 213, 212, 0.64);
     display: flex;
     align-items: center;
     position: fixed;
+    z-index: 2;
 }
 
 header > .header-content {
@@ -38,9 +50,9 @@ header > .header-content {
 .header-content > .menu-bar > .menu-btn {
     width: 48px;
     height: 34px;
-    background-color: #f6f6f7;
+    background-color: var(--main-bg-color);
     border-radius: 3px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--border-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,7 +112,7 @@ header > .header-content {
     width: 35px;
     height: 35px;
     position: absolute;
-    background-color: black;
+    background-color: var(--menu-elem-color);
     border-radius: 50%;
     right: 15%;
     display: flex;
@@ -117,7 +129,7 @@ header > .header-content {
     width: 25px;
     position: absolute;
     height: 5px;
-    background-color: white;
+    background-color: var(--content-main-color);
     content: '';
 }
 
@@ -139,14 +151,14 @@ header > .header-content {
 
 .menu-bar > .nav-content >.nav-list > ul > li > a {
     text-decoration: none;
-    color: black;
+    color: var(--menu-elem-color);
     text-transform: uppercase;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .menu-bar > .nav-content >.nav-list > ul > li > a:hover {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 .header-content > .search-bar {
@@ -168,9 +180,9 @@ header > .header-content {
     width: 100%;
     padding: 0;
     margin: 0;
-    background-color: #f6f6f7;
+    background-color: var(--main-bg-color);
     border-radius: 3px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--border-color);
     padding-left: 5px;
 }
 
@@ -179,8 +191,8 @@ header > .header-content {
     margin: 0;
     z-index: 2;
     position: absolute;
-    background-color: #f6f6f7;
-    border-right: 1px solid #e8e8e8;;
+    background-color: var(--main-bg-color);
+    border-right: 1px solid var(--border-color);;
     box-shadow: none;
     border-left: none;
     border-top: none;
@@ -214,12 +226,12 @@ header > .header-content {
     font-size: 1em;
     font-weight: 540;
     font-family: Arial, Helvetica, sans-serif;
-    color: #8c8c8c;
+    color: var(--text-light-color);
     cursor: pointer;
 }
 
 .header-content > .user-info > .user-name:hover {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 main {
@@ -243,16 +255,16 @@ main > .wrap > .content-block {
 }
 
 .content-block > .content-item {
-    background-color: white;
+    background-color: var(--content-main-color);
     width: calc(25% - 26px);
     display: block;
     margin: 12px;
     text-decoration: none;
-    border: 1px solid #dedede;
+    border: 1px solid var(--border-color);
 }
 
 .content-block > .content-item:hover > .content-info > .content-title {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 .content-block > .content-item > .content-image > img {
@@ -264,7 +276,7 @@ main > .wrap > .content-block {
 }
 
 .content-block > .content-item > .content-info > .content-title {
-    color: #717171;
+    color: var(--text-gray-color);
     font-size: 20px;
     margin-bottom: 10px;
     word-wrap: break-word;
@@ -275,7 +287,7 @@ main > .wrap > .content-block {
     align-items: flex-start;
     justify-content: flex-start;
     margin: 0 0 10px 0;
-    color: #717171;
+    color: var(--text-gray-color);
     width: 100%;
     border-bottom: 1px solid rgba(183, 181, 181, 0.36);
     padding-bottom: 5px;
@@ -288,17 +300,17 @@ main > .wrap > .content-block {
 }
 
 .content-block > .content-item > .content-info > .content-text {
-    color: #B7B5B5;
+    color: var(--text-discr-color);
     max-width: 295px;
     font-size: 0.875em;
     word-wrap: break-word;
-    border-bottom: 1px solid rgba(183, 181, 181, 0.36);
+    border-bottom: 1px solid var(--border-color);
     padding-bottom: 5px;
     margin: 0 0 10px 0;
 }
 
 .content-block > .content-item > .content-info > .content-tags {
-    color: #717171;
+    color: var(--text-gray-color);
     width: 100%;
     word-wrap: break-word;
 }
@@ -313,7 +325,7 @@ main > .wrap > .content-block {
 
 .pagination-content > .pagination-list > .pre-pagination-item,
 .pagination-content > .pagination-list > .post-pagination-item {
-    border: 1px solid #dedede;
+    border: 1px solid var(--border-color);
     margin: 4px;
     padding: 10px;
     cursor: pointer;
@@ -321,12 +333,12 @@ main > .wrap > .content-block {
 
 .pagination-content > .pagination-list > .pre-pagination-item:hover > a,
 .pagination-content > .pagination-list > .post-pagination-item:hover > a {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 .pagination-content a {
     text-decoration: none;
-    color: #717171;
+    color: var(--text-gray-color);
 }
 
 .pagination-content > .pagination-list {
@@ -342,16 +354,16 @@ main > .wrap > .content-block {
     padding: 10px;
     margin: 4px;
     text-align: center;
-    border: 1px solid #dedede;
+    border: 1px solid var(--border-color);
     cursor: pointer;
 }
 
 .pagination-content > .pagination-list > .pagination-item.active a {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 .pagination-content > .pagination-list > .pagination-item:hover a {
-    color: #c1d160;
+    color: var(--text-hover-color);
 }
 
 /* ditail */
@@ -360,8 +372,8 @@ main > .wrap > .content-block {
     display: flex;
     margin-top: 12px;
     width: 100%;
-    background-color: white;
-    border: 1px solid #dedede;
+    background-color: var(--content-main-color);
+    border: 1px solid var(--border-color);
 }     
 
 .post > .image-preview {
@@ -386,7 +398,7 @@ main > .wrap > .content-block {
 }
 
 .post > .post-content > .post-info > .post-title {
-    color: #717171;
+    color: var(--text-gray-color);
     font-size: 20px;
     margin-bottom: 10px;
     word-break: break-all;
@@ -394,7 +406,7 @@ main > .wrap > .content-block {
 }
 
 .post > .post-content > .post-info > .post-discription {
-    color: #B7B5B5;
+    color: var(--text-discr-color);
     max-width: 100%;
     font-size: 1em;
     word-break: break-all;
@@ -405,22 +417,22 @@ main > .wrap > .content-block {
     width: 100%;
     padding-top: 17px;
     padding-bottom: 17px;
-    border-top: 1px solid #dedede;
+    border-top: 1px solid var(--border-color);
     display: flex;
     flex-wrap: wrap;
 }
 
 .post-content > .button-bar > .view-link {
-    background-color: #f6f6f7;
+    background-color: var(--main-bg-color);
     border-radius: 3px; 
     text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #bbbbbc;
+    color: var(--text-light-color);
     height: 45px;
     width: 105px; 
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--border-color);
 }
 
 .comment-post {
@@ -428,8 +440,8 @@ main > .wrap > .content-block {
     display: flex;
     flex-direction: column;
     margin-top: 50px;
-    background-color: white;
-    border: 1px solid #dedede;
+    background-color: var(--content-main-color);
+    border: 1px solid var(--border-color);
 }
 
 .comment-post > .comment-form {
@@ -448,15 +460,15 @@ main > .wrap > .content-block {
 }
 
 .comment-form > .comment-title {
-    color: #717171;
+    color: var(--text-gray-color);
 }
 
 .comment-post > .comment-form > .content-form > textarea {
     outline: none;
     width: 85%;
     resize: none;
-    background-color: #f6f6f7;
-    border: 1px solid #e8e8e8;
+    background-color: var(--main-bg-color);
+    border: 1px solid var(--border-color);
     border-radius: 3px;
     padding: 10px;
     height: 100px;
@@ -465,12 +477,12 @@ main > .wrap > .content-block {
 
 .comment-post > .comment-form > .content-form > button {
     outline: none;
-    background-color: #f6f6f7;
-    color: #bbbbbc;
+    background-color: var(--main-bg-color);
+    color: var(--text-light-color);
     border-radius: 3px;
     height: 45px;
     width: 105px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid var(--border-color);
     font-size: 16px;
     margin-bottom: 10px;
 }
@@ -497,14 +509,84 @@ main > .wrap > .content-block {
 }
 
 .comment-name {
-    color: #8c8c8c;
+    color: var(--text-light-color);
     padding-left: 10px;
 }
 
 .comment-text {
-    color: #717171;
+    color: var(--text-gray-color);
     word-wrap: break-word;
     word-break: break-all;
+}
+
+.gallery-block {
+    background-color: var(--content-main-color);
+    border: 1px solid var(--border-color);
+    margin-top: 12px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gallery-item {
+    width: calc((100% / 6) - 12px); 
+    margin: 6px;
+    position: relative;
+}
+
+.gallery-item > .gallery-image {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.gallery-item:hover::after {
+    content: attr(data-title); /* Выводим текст */
+    text-decoration: none;
+    text-align: center;
+    color: var(--text-light-color);
+    font-size: 15px;
+    position: absolute; 
+    width: 70%;
+    height: 10%;
+    z-index: 1;
+    left: 50%;
+    top: 50%;
+    margin-left: calc(-70% / 2);
+    margin-top: calc(-5% / 2);
+    border-radius: 10px;
+    background-color: rgba(240, 239, 238, 0.74);   
+    border: 1px solid var(--border-color);
+}
+
+.item-content {
+    display: block;
+    position: relative;
+    margin: 12px auto;
+    width: 90%;
+    height: 100%;
+    max-height: 1200px;
+    z-index: 1;
+}
+
+.item-content img {
+    width: 100%;
+    height: 100%;
+    max-height: 1200px;
+}
+
+.link-item {
+    position: absolute;
+    height: 100%;
+    width: 50%;
+}
+
+.link-item.pre {
+    left: 0;
+}
+
+.link-item.next {
+    right: 0;
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
@@ -513,12 +595,11 @@ main > .wrap > .content-block {
     } 
 
     .content-block > .content-item > .content-info > .content-title {
-        color: #717171;
+        color: var(--text-gray-color);
         font-size: 13px;
     }
     
     .content-block > .content-item > .content-info > .content-text {
-        color: #B7B5B5;
         font-size: 0.600em;
 
     }
@@ -537,6 +618,11 @@ main > .wrap > .content-block {
 
     .comment-post > .comment-form > .content-form > textarea {
         width: calc(100% - 20px);
+    }
+
+    .gallery-item {
+        width: calc((100% / 3) - 12px); 
+        margin: 6px;
     }
 }
 
@@ -615,5 +701,10 @@ main > .wrap > .content-block {
 
     .comment-post > .comment-form > .content-form > button {
         width: 100%;
+    }
+
+    .gallery-item {
+        width: 100%; 
+        margin: 6px;
     }
 }
